
	* tests/tinytest.R: New test driver using tinytest
	* DESCRIPTION (Suggests): Added tinytest
	* .travis.yml (install): Install tinytest

	* inst/tinytest/testRaw.R: Converted from tests/raw.R
	* inst/tinytest/testCRC32.R: Converted from tests/crc32.R
	* inst/tinytest/testDigest2Int.R: From tests/digest2int.R
	* inst/tinytest/testNum2Hex.R: From tests/num2hexTest.R

2019-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.19

        * src/SpookyV2.cpp: Add some #nocov tags

2019-05-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New minor version

        * tests/digestTest.Rout.save: Updated reference output

2019-05-12  Kendon Bell  <bellk@landcareresearch.co.nz>

        * R/digest.R: Account for 'skip' bytes for streaming algos
        * tests/digestTest.R: Adjust test for streaming_algos

2019-05-09  Dirk Eddelbuettel  <edd@debian.org>

        * src/Makevars: Added to ensure C++11 compilation standard
        * cleanup: Do not delete src/Makevars now that we have one
        * tests/digestTest.Rout.save: Updated reference output

2019-05-06  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Mention spookyhash and Kendon
        * DESCRIPTION (Description): Mention spookyhash

2019-05-04  Kendon Bell  <bellk@landcareresearch.co.nz>

        * tests/digestTest.R: Added more tests
        * src/spooky_serialize.cpp: Added copyright header

2019-05-04  Dirk Eddelbuettel  <edd@debian.org>

        * R/digest.R: Add some #nocov tags
        * src/SpookyV2.h: Idem
        * src/SpookyV2.cpp: Idem
        * src/spooky_serialize.cpp: Idem

2019-05-03  Dirk Eddelbuettel  <edd@debian.org>

        * tests/digestTest.Rout.save: Updated reference output

2019-04-30  Kendon Bell  <bellk@landcareresearch.co.nz>

        * digest.R: Support spookyhash
        * src/SpookyV2.h: Idem
        * src/SpookyV2.cpp: Idem
        * src/spooky_serialize.cpp: Idem
        * man/digest.Rd: Document spookyhash